--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,33 @@ Thumbs.db
 *.pyo
 *.pyc
 *.pyd
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# 장고 관련
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db_settings.py
+db.sqlite3
+
+# Visual Studio Code
+.vscode/
+
+# macOS
+.DS_Store
+
+# Thumbnails
+_Thumbnails/
+
+# Environments
+venv/
+env/
+
+# Pipenv
+Pipfile.lock
